# mp3d

./: CMakeLists.txt  mainwindow.ui
.cache/clangd/index/: main.cpp.93C3AF5A77A97026.idx  mainwindow.cpp.545AFBBFA96E35F9.idx  mainwindow.h.B2A5AF9992D68939.idx
